Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113423

"applicationAdded" signal needs update in the documentation

    XMLWordPrintable

Details

    • Linux/Wayland
    • c4f24b843 (dev), 0442eb6c3 (6.5)

    Description

      https://doc.qt.io/QtApplicationManager/qml-qtapplicationmanager-systemui-applicationmanager.html#applicationAdded-signal

      The descrition says "This signal is emitted after a new application, identified by id, has been installed via the ApplicationInstaller. " But ApplicationInstaller should have been depricated according to https://doc.qt.io/QtApplicationManager/qml-qtapplicationmanager-systemui-packagemanager.html#details 

      Attachments

        For Gerrit Dashboard: QTBUG-113423
        # Subject Branch Project Status CR V

        Activity

          People

            docteam Qt Documentation Team
            mikio_hirai Mikio Hirai
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes