A bunch of smaller documentation fixes

Change-Id: I8bede05ea5e7cd770301efdd5671c30c34bade9a
Fixes: QTBUG-113423
Fixes: QTBUG-113302
Fixes: QTBUG-113293
Task-number: QTBUG-113292
Fixes: QTBUG-113291
Pick-to: 6.5
Reviewed-by: Bernd Weimer <bernd.weimer@qt.io>